Attempt to run full pipeline